--- a/templates/todo/show.html.twig
+++ b/templates/todo/show.html.twig
@@ -1,30 +1,36 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Todo{% endblock %}
+{% block title %}Todo
+{% endblock %}
 
 {% block body %}
-    <h1>Todo</h1>
+	<h1>Todo</h1>
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ todo.id }}</td>
-            </tr>
-            <tr>
-                <th>Nom</th>
-                <td>{{ todo.name }}</td>
-            </tr>
-            <tr>
-                <th>Description</th>
-                <td>{{ todo.description }}</td>
-            </tr>
-        </tbody>
-    </table>
+	<table class="table">
+		<tbody>
+			<tr>
+				<th>Id</th>
+				<td>{{ todo.id }}</td>
+			</tr>
+			<tr>
+				<th>Nom</th>
+				<td>{{ todo.name }}</td>
+			</tr>
+			<tr>
+				<th>Description</th>
+				<td>{{ todo.description }}</td>
+			</tr>
+			<tr>
+				<th>Statut</th>
+				<td>{{ todo.status }}</td>
+			</tr>
+		</tbody>
+	</table>
 
-    <a href="{{ path('app_todo_index') }}">back to list</a>
+	<a href="{{ path('app_todo_index') }}">back to list</a>
 
-    <a href="{{ path('app_todo_edit', {'id': todo.id}) }}">edit</a>
+	<a href="{{ path('app_todo_edit', {'id': todo.id}) }}">edit</a>
 
-    {{ include('todo/_delete_form.html.twig') }}
+	{{ include('todo/_delete_form.html.twig') }}
+
 {% endblock %}
