--- a/templates/todo/show.html.twig
+++ b/templates/todo/show.html.twig
@@ -27,9 +27,9 @@
 		</tbody>
 	</table>
 
-	<a href="{{ path('app_todo_index') }}">back to list</a>
+	<a href="{{ path('app_todo_index') }}">Retour à la liste</a>
 
-	<a href="{{ path('app_todo_edit', {'id': todo.id}) }}">edit</a>
+	<a href="{{ path('app_todo_edit', {'id': todo.id}) }}">editer</a>
 
 	{{ include('todo/_delete_form.html.twig') }}
 
