--- a/templates/todo/edit.html.twig
+++ b/templates/todo/edit.html.twig
@@ -3,11 +3,11 @@
 {% block title %}Edit Todo{% endblock %}
 
 {% block body %}
-    <h1>Edit Todo</h1>
+    <h1>Editer une tache</h1>
 
     {{ include('todo/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('app_todo_index') }}">back to list</a>
+    <a href="{{ path('app_todo_index') }}">Retour à la liste</a>
 
     {{ include('todo/_delete_form.html.twig') }}
 {% endblock %}
